--- a/MachineTest/ClientApp/src/app/city/city-modal.html
+++ b/MachineTest/ClientApp/src/app/city/city-modal.html
@@ -1,5 +1,6 @@
 <h4 mat-dialog-title>City</h4>
 <div mat-dialog-content>
+<form [formGroup]="cityForm" autocomplete="off" novalidate>
   <mat-form-field hidden>
     <input matInput [(ngModel)]="data.id" >
   </mat-form-field>
@@ -13,7 +14,7 @@
   <mat-form-field class="col-sm-12">
     <textarea matInput placeholder="Textarea"  [(ngModel)]="data.description" placeholder="Description"></textarea>
   </mat-form-field>
-
+</form>
 </div>
 <div mat-dialog-actions class="col-sm-12">
   <button mat-raised-button color="warn" (click)="onNoClick()">No Thanks</button>
