--- a/MachineTest/ClientApp/src/app/customer/customer.component.html
+++ b/MachineTest/ClientApp/src/app/customer/customer.component.html
@@ -1,3 +1,39 @@
-<p>
-  customer works!
-</p>
+<form class="example-form" >
+
+    <mat-form-field hidden>
+        <input matInput >
+      </mat-form-field>
+
+  <div class="form-group">
+        <mat-form-field class="col-md-4">
+            <input matInput placeholder="Name" [formControl]="customerFormControl" >
+            <mat-error *ngIf="customerFormControl.hasError('required')">
+              Name is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+  </div>
+
+  <div class="form-group">
+      <mat-form-field class="col-md-4">
+          <textarea matInput placeholder="Address" rows="3"></textarea>
+        </mat-form-field>
+  </div>
+
+  <div class="form-group">
+      <mat-form-field class="col-md-4">
+          <mat-label>City</mat-label>
+          <mat-select [formControl]="selectFormControl" required>
+            <mat-option>--</mat-option>
+            <mat-option *ngFor="let city of cities" [value]="city.id">
+              {{city.name}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="selectFormControl.hasError('required')">Please choose an animal</mat-error>
+        </mat-form-field>
+  </div>
+ 
+</form>
+<div mat-dialog-actions class="pull-right">
+    <button mat-button (click)="onNoClick()" class="btn btn-danger">Cancel</button>
+    <button mat-raised-button cdkFocusInitial color="primary" (click)="onNoClick()" class="btn btn-info">Save</button>
+  </div>
