--- a/MachineTest/ClientApp/src/app/customer/customer.component.html
+++ b/MachineTest/ClientApp/src/app/customer/customer.component.html
@@ -1,7 +1,7 @@
-<form class="example-form" >
+<form class="example-form" name="customerForm" >
 
     <mat-form-field hidden>
-        <input matInput >
+        <input matInput>
       </mat-form-field>
 
   <div class="form-group">
@@ -24,7 +24,7 @@
           <mat-label>City</mat-label>
           <mat-select [formControl]="selectFormControl" required>
             <mat-option>--</mat-option>
-            <mat-option *ngFor="let city of cities" [value]="city.id">
+            <mat-option *ngFor="let city of cities" [value]="city.id" >
               {{city.name}}
             </mat-option>
           </mat-select>
@@ -35,5 +35,5 @@
 </form>
 <div mat-dialog-actions class="pull-right">
     <button mat-button (click)="onNoClick()" class="btn btn-danger">Cancel</button>
-    <button mat-raised-button cdkFocusInitial color="primary" (click)="onNoClick()" class="btn btn-info">Save</button>
+    <button mat-raised-button cdkFocusInitial color="primary" (click)="saveCustomer(data)" class="btn btn-info">Save</button>
   </div>
